ReSharper.FSharp/test/data/parsing/errors/Type member - Interface 03.fs
type T1 =
    interface I with

[<A>]
do ()
